# clean-fastapi-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  compose.prod.yml  compose.yml  pyproject.toml  ruff.toml
front/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.js
front/src/: app.css
front/src/lib/: api-client.ts  env.js
front/src/lib/components/: ModelSearchList.svelte
front/src/routes/: +layout.svelte  +page.svelte  ModelRadio.svelte  ParameterSlider.svelte
src/rename/: __init__.py  __main__.py  settings.py
src/rename/api/: app.py  auth.py  depends.py
src/rename/api/core/: exceptions.py  improve.py  ml.py
src/rename/api/schemas/: api_keys.py
src/rename/api/v1/: api_keys.py  ml.py  router.py
src/rename/application/: __init__.py  api_keys.py  ml.py  tokenizer.py  users.py
src/rename/commands/: api_keys.py  app.py  dataset.py  ml.py  tokenizer.py  users.py
src/rename/domain/: api_keys.py  dataset.py  ml.py  tokenizer.py  users.py
src/rename/infrastructure/database/: adapter.py
src/rename/infrastructure/repositories/: api_keys.py  ml.py  tokenizer.py  users.py
src/rename/infrastructure/storage/: local.py  s3.py
src/template/: __init__.py  __main__.py  app.py  cli.py  constants.py  database.py  depends.py  settings.py  utils.py
src/template/api/: app.py  auth.py  depends.py
src/template/api/core/: exceptions.py  improve.py
src/template/api/routes/: auth.py  depends.py
src/template/api/routes/v1/: api_keys.py  ml.py  router.py
src/template/api/schemas/: api_keys.py
src/template/api/v1/: api_keys.py  ml.py  router.py
src/template/application/: api_keys.py  ml.py  tokenizer.py  users.py
src/template/cli/: app.py
src/template/cli/commands/: api_keys.py  dataset.py  ml.py  tokenizer.py  users.py
src/template/commands/: api_keys.py  app.py  cli.py  dataset.py  ml.py  tokenizer.py  users.py
src/template/commands/commands/: ml.py  tokenizer.py  users.py
src/template/controller/commands/: api_keys.py  app.py  dataset.py  ml.py  tokenizer.py  users.py
src/template/controller/routes/: auth.py  depends.py
src/template/controller/routes/schemas/: users.py
src/template/controller/routes/v1/: __init__.py  api_keys.py  ml.py  router.py
src/template/core/: cli.py  constants.py  exceptions.py  improve.py  ml.py  state.py
src/template/domain/: api_keys.py  dataset.py  ml.py  tokenizer.py  users.py
src/template/infrastructure/: database.py  s3.py
src/template/infrastructure/database/: adapter.py  api_keys.py  base.py  users.py
src/template/infrastructure/repositories/: api_keys.py  ml.py  tokenizer.py  users.py
src/template/infrastructure/s3/: adapter.py  base.py
src/template/infrastructure/sql/: base.py
src/template/infrastructure/storage/: adapter.py  base.py  local.py  ml.py  s3.py  tokenizer.py
src/template/interface/api/: app.py  auth.py  depends.py
src/template/interface/api/routes/: auth.py
src/template/interface/api/routes/v1/: api_keys.py  ml.py  router.py
src/template/interface/api/schemas/: api_keys.py  ml.py  users.py
src/template/interface/api/v1/: api_keys.py  ml.py  router.py
src/template/interface/cli/: app.py
src/template/interface/cli/commands/: api_keys.py  ml.py  tokenizer.py  users.py
src/template/models/: api_keys.py  ml.py  users.py
src/template/repositories/: _pickle.py  api_keys.py  dataset.py  ml.py  pickle.py  s3.py  tokenizer.py  users.py
src/template/routers/: index.py
src/template/routes/: api_keys.py  index.py  ml.py
src/template/schemas/: api_keys.py  users.py
src/template/services/: api_keys.py  auth.py  dataset.py  ml.py  tokenizer.py  users.py
tests/: conftest.py  test_acceptations.py  test_cli.py  test_settings.py
tests/repositories/: test_api_keys.py
tests/services/: test_api_keys.py  test_ml.py
tests/test_services/: test_ml.py
