[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.13"
dependencies = [

    "fastapi[standard]>=0.115.12",
    "python-dotenv>=1.1.0",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "typer>=0.15.4",
]

[project.scripts]
cli = "template:cli"
lint = "template:lint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [

    "ruff>=0.11.10",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.26.0",
    "asgi-lifespan>=2.1.0",
]

[tool.pytest.ini_options]
# Automatically create html and xml coverage reports
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"
asyncio_mode = "auto"

# asyncio_default_fixture_loop_scope = "session"