[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "python-dotenv>=1.1.0",
    "gunicorn>=23.0.0",
    "orjson>=3.10.18",
    "loguru>=0.7.3",
    "typer>=0.15.4",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.4.0",
    "bcrypt>=4.3.0",
    "passlib>=1.7.4",
    "aioboto3>=14.3.0",
    "botocore>=1.37.3",
    "moto[server]>=5.1.5",
    "polars>=1.30.0",
]

[project.scripts]
cli = "template:cli"
lint = "template:lint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.1a7",
    "ruff>=0.11.10",
    "vulture>=2.14",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.26.0",
    "asgi-lifespan>=2.1.0",
    # SQLAlchemy dev mode
    "sqlalchemy[asyncio]>=2.0.41",
    "aiosqlite>=0.21.0",
]

[tool.pytest.ini_options]
# Automatically create html and xml coverage reports
addopts = "-n 4 --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"

# Automatically apply pytest-asyncio to all async tests
asyncio_mode = "auto"

# PytestDeprecationWarning: The configuration option "asyncio_default_fixture_loop_scope" is unset.
# - The event loop scope for asynchronous fixtures will default to the fixture caching scope.
# - Future versions of pytest-asyncio will default the loop scope for asynchronous fixtures to function scope.
# - Set the default fixture loop scope explicitly in order to avoid unexpected behavior in the future.
# - Valid fixture loop scopes are: "function", "class", "module", "package", "session"

# You must set as "session" to avoid the warning "DeprecationWarning"
# "pytest-asyncio detected an unclosed event loop when tearing down the event_loop"
# because, in "function" scope for example, this parameter change also the default scope of the event_loop fixture to "function"
# and you are forced to use the rewritten event_loop fixture in your conftest.py, this create this warning
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
omit = ["src/template/__init__.py"]
